Add firstly implemented server
