# pkg/api/v1/types.gen.go
@@ -1,0 +1,104 @@
+// Package v1 provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+package v1
+
+const (
+	IdentityTokenScopes = "identityToken.Scopes"
+)
+
+// Error defines model for Error.
+type Error struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+	Reason  string `json:"reason"`
+}
+
+// Scope defines model for Scope.
+type Scope struct {
+	Description *string `json:"description,omitempty"`
+	Value       *string `json:"value,omitempty"`
+}
+
+// DeleteClientParams defines parameters for DeleteClient.
+type DeleteClientParams struct {
+	// Id (Required) ID for client to delete.
+	Id string `form:"id" json:"id"`
+
+	// Passthrough Optionally include passthrough data as a json string
+	Passthrough *string `form:"passthrough,omitempty" json:"passthrough,omitempty"`
+}
+
+// GetClientParams defines parameters for GetClient.
+type GetClientParams struct {
+	// Id Client id
+	Id string `form:"id" json:"id"`
+
+	// Passthrough Optionally include passthrough data as a json string
+	Passthrough *string `form:"passthrough,omitempty" json:"passthrough,omitempty"`
+}
+
+// CreateClientJSONBody defines parameters for CreateClient.
+type CreateClientJSONBody struct {
+	GlooPortalTeamId *string                 `json:"glooPortalTeamId,omitempty"`
+	GlooPortalUserId *string                 `json:"glooPortalUserId,omitempty"`
+	Passthrough      *map[string]interface{} `json:"passthrough,omitempty"`
+}
+
+// DeleteClientScopeParams defines parameters for DeleteClientScope.
+type DeleteClientScopeParams struct {
+	// Id (Required) Client ID to delete scope for
+	Id string `form:"id" json:"id"`
+
+	// Scope (Required) Scope name to delete
+	Scope string `form:"scope" json:"scope"`
+
+	// Passthrough Optionally include passthrough data as a json string
+	Passthrough *string `form:"passthrough,omitempty" json:"passthrough,omitempty"`
+}
+
+// GetClientScopesParams defines parameters for GetClientScopes.
+type GetClientScopesParams struct {
+	// Id Client ID to get scopes for
+	Id string `form:"id" json:"id"`
+
+	// Passthrough Optionally include passthrough data as a json string
+	Passthrough *string `form:"passthrough,omitempty" json:"passthrough,omitempty"`
+}
+
+// AddClientScopeJSONBody defines parameters for AddClientScope.
+type AddClientScopeJSONBody struct {
+	Id          string                  `json:"id"`
+	Passthrough *map[string]interface{} `json:"passthrough,omitempty"`
+	Scope       string                  `json:"scope"`
+}
+
+// DeleteScopeParams defines parameters for DeleteScope.
+type DeleteScopeParams struct {
+	// Scope (Required) Name of the scope we'd like to delete.
+	Scope string `form:"scope" json:"scope"`
+
+	// Passthrough Optionally include passthrough data
+	Passthrough *string `form:"passthrough,omitempty" json:"passthrough,omitempty"`
+}
+
+// GetScopesParams defines parameters for GetScopes.
+type GetScopesParams struct {
+	// Passthrough Optionally include passthrough data
+	Passthrough *string `form:"passthrough,omitempty" json:"passthrough,omitempty"`
+}
+
+// CreateScopeJSONBody defines parameters for CreateScope.
+type CreateScopeJSONBody struct {
+	Passthrough *map[string]interface{} `json:"passthrough,omitempty"`
+	Scope       Scope                   `json:"scope"`
+}
+
+// CreateClientJSONRequestBody defines body for CreateClient for application/json ContentType.
+type CreateClientJSONRequestBody CreateClientJSONBody
+
+// AddClientScopeJSONRequestBody defines body for AddClientScope for application/json ContentType.
+type AddClientScopeJSONRequestBody AddClientScopeJSONBody
+
+// CreateScopeJSONRequestBody defines body for CreateScope for application/json ContentType.
+type CreateScopeJSONRequestBody CreateScopeJSONBody
